# LabProg_chat

./: CMakeLists.txt  Chat.cpp  Chat.h  GroupChat.cpp  GroupChat.h  Message.cpp  Message.h  Notifier.cpp  Notifier.h  Observer.h  Subject.h  User.cpp  User.h  badNotifier.cpp  badNotifier.h  main.cpp
docs/: uml_diagram.mdj
test/: CMakeLists.txt  ChatTest.cpp  GroupChatTest.cpp  MessageTest.cpp  NotifierTest.cpp  UserTest.cpp  runAllTests.cpp
